--- a/.github/workflows/yt_wf.yml
+++ b/.github/workflows/yt_wf.yml
@@ -1,4 +1,4 @@
-name: Actualizar Últimos Videos de YouTube
+name: "Actualizar Últimos Videos de YouTube"
 
 on:
   # Ejecuta este flujo de trabajo cada 12 horas
@@ -20,22 +20,9 @@ jobs:
       - name: Actualizar README con los últimos videos de YouTube
         uses: gautamkrishnar/blog-post-workflow@v1.2
         with:
-          # La fuente de los videos. Aquí, el ID de tu canal de YouTube.
-          # Puedes encontrar el ID de tu canal en la URL de tu canal o en la configuración avanzada de YouTube.
-          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UC-l_8ggAw-u4dJZtO05F5zQ" # ID del canal @jimcostdev
-
-          # Marcadores en tu README.md donde se insertarán los videos.
-          # Asegúrate de que tu README.md tenga <!-- YOUTUBE:START --> y <!-- YOUTUBE:END -->
+          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UC-l_8ggAw-u4dJZtO05F5zQ"
           comment_tag_name: "YOUTUBE"
-
-          # Formato de la lista de videos.
           template: "- [$title]($url)"
-
-          # Número máximo de videos a mostrar.
           max_post_count: "5"
-
-          # Incluir miniaturas de los videos.
           image_thumbnail: "true"
-
-          # Aquí usamos el secreto de GitHub que creamos.
           youtube_api_key: ${{ secrets.YOUTUBE_API_KEY }}
