--- a/.github/workflows/yt_wf.yml
+++ b/.github/workflows/yt_wf.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Actualizar README con los últimos videos de YouTube
-        uses: gautamkrishnar/blog-post-workflow@v1.8.6
+        uses: gautamkrishnar/blog-post-workflow@latest
         with:
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UC-l_8ggAw-u4dJZtO05F5zQ"
           comment_tag_name: "YOUTUBE"
