--- a/.github/workflows/yt_wf.yml
+++ b/.github/workflows/yt_wf.yml
@@ -1,24 +1,20 @@
 name: "Actualizar Últimos Videos de YouTube"
-
 on:
   schedule:
+    # Runs every hour
     - cron: '0 */12 * * *'
   workflow_dispatch:
 
 jobs:
-  update-youtube-videos:
+  update-readme-with-youtube:
+    name: Update this repo's README with latest videos from mi Youtube Channel
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-      - name: Checkout el repositorio
-        uses: actions/checkout@v4
-
-      - name: Actualizar README con los últimos videos de YouTube
-        uses: gautamkrishnar/blog-post-workflow@master
+      - uses: actions/checkout@v2
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UC-l_8ggAw-u4dJZtO05F5zQ"
-          comment_tag_name: "YOUTUBE"
-          template: "- [$title]($url)\n"
           max_post_count: "5"
+          comment_tag_name: "YOUTUBE"
+          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UC-l_8ggAw-u4dJZtO05F5zQ"
+
+      
